Added Difficulty Level for AI

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
                 <button class="box"></button>
             </div>
         </div>
+        <div class="difficulty-selector">
+  <label for="difficulty">AI Difficulty:</label>
+  <select id="difficulty">
+    <option value="0">Hard (Unbeatable)</option>
+    <option value="0.2">Medium</option>
+    <option value="0.5">Easy</option>
+  </select>
+</div>
+
+
         <button id="reset">Reset Game</button>
     </main>
     <script src="app.js"></script>
